# agentic-accounting

./: .gitignore  MCP_DOCUMENTATION.md  PLAN_CHAT_REFACTOR.md  README.md  SKILL.md  USER_MANUAL.md  docker-compose.yml
api/: Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_coa.py  002_transactions.py  003_contacts.py  004_bank.py  005_reconciliation.py  006_invoicing.py  007_vat.py  008_reports.py  009_users.py  010_approvals.py  011_bank_rules.py  012_recurring.py  013_documents.py  014_contacts_other_type.py
api/src/: __init__.py  index.py
api/src/bank_templates/: barclays.json  hsbc.json  lloyds.json  monzo.json  natwest.json  revolut.json  rules.json  starling.json
api/src/coa_templates/: micro_entity_simplified.json  property_landlord_vat.json  uk_limited_company_no_vat.json  uk_limited_company_vat.json  uk_partnership_no_vat.json  uk_partnership_vat.json  uk_sole_trader_no_vat.json  uk_sole_trader_vat.json
api/src/config/: __init__.py  database.py
api/src/middleware/: approval.py  auth.py
api/src/models/: __init__.py  account.py  approval.py  bank_account.py  bank_rule.py  contact.py  document.py  invoice.py  reconciliation.py  recurring.py  report.py  transaction.py  user.py  vat.py
api/src/routes/: __init__.py  approvals.py  auth.py  bank.py  bank_rules.py  chat.py  coa.py  contacts.py  documents.py  invoices.py  mtd.py  open_banking.py  reconciliation.py  recurring.py  reports.py  transactions.py  vat.py
api/tests/: conftest.py  phase2_replay.py  test_formatting_regression.py
chat-ui/: server.py  (+3 more)
(+154 files in other folders)
